project phases working

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       <div class="gantt-legend" id="ganttLegend"></div>
       <div id="ganttChart"></div>
     </div>
-    <script src="script.js"></script>
+
+    <div class="phase-legend" id="phaseLegend"></div>
+
     <br />
     <br />
     <section id="TODO">
       <h4>TODO</h4>
       <ul>
-        <li>Bar Chart text Squad and Phase</li>
-        <li>Bar Style Fill = PhaseName, Nedbank Phases</li>
         <li>
           Create Separate bar status background (grey-uknown, red-bad,
           green-good )
@@ -29,5 +29,7 @@
         <li>Convert date to week number</li>
       </ul>
     </section>
+    <script src="data.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
