Lane Status Working

--- a/index.html
+++ b/index.html
@@ -12,21 +12,17 @@
       <div class="gantt-legend" id="ganttLegend"></div>
       <div id="ganttChart"></div>
     </div>
-
-    <div class="phase-legend" id="phaseLegend"></div>
+    <div class="gantt-container">
+      <div class="phase-legend" id="phaseLegend"></div>
+      <div class="phase-legend" id="laneStatusLegend"></div>
+    </div>
 
     <br />
     <br />
     <section id="TODO">
       <h4>TODO</h4>
       <ul>
-        <li>
-          Create Separate bar status background (grey-uknown, red-bad,
-          green-good )
-        </li>
-        <li>Add Status to the dataset</li>
-        <li>Make week number sensible</li>
-        <li>Convert date to week number</li>
+        <li>Legend = Project + Squad</li>
       </ul>
     </section>
     <script src="data.js"></script>
