TODO List Updates

--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
       <ul>
         <li>Phase Filter</li>
         <li>Sort Order</li>
+        <li>Separate page for Resource</li>
+        <ul>
+          <li>Stacked per project bar chart with number of resources per squad</li>
+          <li>Think of squad colors..</li>
+          <li>Stacked per squad bar chart with number of resources per squad</li>
+          <li>Filter by squad and project</li>
+        </ul>
+        <li>Array of colors for projects</li>
+        <li>Array of different colors for squads</li>
+        
       </ul>
     </section>
     <script src="dataGet.js"></script>
